# hadron-swig-napi-example-project

./: .gitignore  .mocharc.cjs  README.md  conanfile.txt  emscripten-noasync.ini  emscripten.ini  linux.ini  meson.build  meson.options  meson_options.txt  package-lock.json  package.json  swig.ini  windows.ini  zlibng-sync-bug.profile
.github/: dependabot.yml
.github/workflows/: publish.yml  run.yml
hadron/: clang-darwin.ini  clang-darwin.profile  clang-linux.ini  clang-linux.profile  clang-win32.ini  clang-win32.profile  clang-windows.profile  clang.ini  emscripten.ini  emscripten.profile  gcc-linux.ini  gcc.ini  global.ini  hadron-download-headers.js  hadron-download-headers.ts  linux.ini  system-darwin.profile  system-linux.profile  windows.ini
lib/: example.cjs  wasm.mjs
lib/binding/: example.mjs  example.node  example.worker.mjs
src/: blob.cc  blob.h  blob.i  callback.i  swig_napi_callback.i
test/: sync.ts
test/browser/: karma.conf.cjs
